data/raw_logs/semantic/sem_29.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_29.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_29.c:1:41: error: conflicting types for 'x'; have 'float'
    1 | int main() { static int x; extern float x; }
      |                                         ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_29.c:1:25: note: previous declaration of 'x' with type 'int'
    1 | int main() { static int x; extern float x; }
      |                         ^
